--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,6 @@
+@import "~carbon-components/scss/globals/scss/vars.scss";
 
-@import '~carbon-components/scss/globals/scss/vendor/@carbon/type/scss/font-family.scss';
-@import '~carbon-components/scss/globals/scss/vendor/@carbon/layout/scss/breakpoint.scss';
-@import '~carbon-components/scss/globals/scss/typography.scss';
-@import '~carbon-components/scss/globals/scss/vars.scss';
-
-@import './components/Footer/footer';
+@import "./components/Footer/footer";
 
 .bx--content {
   flex: 1 1 auto;
